--- a/base/static/global/css/style.css
+++ b/base/static/global/css/style.css
@@ -17,3 +17,44 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.content{
+    display: grid;
+    gap: 1.5rem;
+    padding: 1.5rem;
+}
+.post{
+    background-color: white;
+    padding: 1.5rem;
+    box-shadow: 5px 2px 5px rgba(0, 0, 0, 10%);
+}
+
+@media (min-width: 600px){
+  .content:not(:has(.single-post)){
+      grid-template-columns: repeat(auto-fill, minmax(32rem, 1fr));
+  }
+}
+
+.menu{
+  background-color: black;
+  padding: 0 1.5rem;
+}
+.menu__links a{
+  color: white;
+  padding: 1.5rem;
+  display: block;
+
+}
+.menu__links{
+  list-style: none;
+  display: flex;
+}
+
+a{
+  color:rgb(118, 157, 224);
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: underline;
+}
